add ui shadcn component and refactore folder structure

--- a/env.example
+++ b/env.example
@@ -18,3 +18,10 @@ VITE_API_ENDPOINT_SESSIONS_DELETE=/sessions/:id
 
 # Dashboard Endpoints
 VITE_API_ENDPOINT_DASHBOARD_STATS=/dashboard/stats
+
+# Users Endpoints
+VITE_API_ENDPOINT_USERS_LIST=/users
+VITE_API_ENDPOINT_USERS_CREATE=/users
+VITE_API_ENDPOINT_USERS_GET=/users/:id
+VITE_API_ENDPOINT_USERS_UPDATE=/users/:id
+VITE_API_ENDPOINT_USERS_DELETE=/users/:id
