feat: expand API endpoints for sessions, users, goals, payments, coaches, entrepreneurs, startups, activities, organization, roles, files, notifications, and search

--- a/env.example
+++ b/env.example
@@ -4,24 +4,129 @@ VITE_API_URL=http://localhost:5000/api/v1
 # Environment
 VITE_APP_ENV=development
 
+# -----------------------
 # Auth Endpoints
+# -----------------------
 VITE_API_ENDPOINT_AUTH_LOGIN=/auth/login
 VITE_API_ENDPOINT_AUTH_REGISTER=/auth/register
 VITE_API_ENDPOINT_AUTH_ME=/auth/me
 
+# -----------------------
 # Session Endpoints
+# -----------------------
 VITE_API_ENDPOINT_SESSIONS_LIST=/sessions
 VITE_API_ENDPOINT_SESSIONS_CREATE=/sessions
-VITE_API_ENDPOINT_SESSIONS_GET=/sessions/:id
-VITE_API_ENDPOINT_SESSIONS_UPDATE=/sessions/:id
-VITE_API_ENDPOINT_SESSIONS_DELETE=/sessions/:id
+VITE_API_ENDPOINT_SESSIONS_GET=/sessions/:sessionId
+VITE_API_ENDPOINT_SESSIONS_UPDATE=/sessions/:sessionId
+VITE_API_ENDPOINT_SESSIONS_PATCH=/sessions/:sessionId
+VITE_API_ENDPOINT_SESSIONS_DELETE=/sessions/:sessionId
 
+# Session Notes
+VITE_API_ENDPOINT_SESSIONS_NOTES_LIST=/sessions/:sessionId/notes
+VITE_API_ENDPOINT_SESSIONS_NOTES_CREATE=/sessions/:sessionId/notes
+
+# -----------------------
 # Dashboard Endpoints
+# -----------------------
 VITE_API_ENDPOINT_DASHBOARD_STATS=/dashboard/stats
+VITE_API_ENDPOINT_DASHBOARD_SESSIONS=/dashboard/sessions
+VITE_API_ENDPOINT_DASHBOARD_GOALS_CATEGORY=/dashboard/goals-category
+VITE_API_ENDPOINT_DASHBOARD_REVENUE=/dashboard/revenue
 
+# -----------------------
 # Users Endpoints
+# -----------------------
 VITE_API_ENDPOINT_USERS_LIST=/users
 VITE_API_ENDPOINT_USERS_CREATE=/users
-VITE_API_ENDPOINT_USERS_GET=/users/:id
-VITE_API_ENDPOINT_USERS_UPDATE=/users/:id
-VITE_API_ENDPOINT_USERS_DELETE=/users/:id
+VITE_API_ENDPOINT_USERS_GET=/users/:userId
+VITE_API_ENDPOINT_USERS_UPDATE=/users/:userId
+VITE_API_ENDPOINT_USERS_PATCH=/users/:userId
+VITE_API_ENDPOINT_USERS_DELETE=/users/:userId
+
+# -----------------------
+# Goals Endpoints
+# -----------------------
+VITE_API_ENDPOINT_GOALS_LIST=/goals
+VITE_API_ENDPOINT_GOALS_CREATE=/goals
+VITE_API_ENDPOINT_GOALS_GET=/goals/:goalId
+VITE_API_ENDPOINT_GOALS_UPDATE=/goals/:goalId
+VITE_API_ENDPOINT_GOALS_PATCH=/goals/:goalId
+VITE_API_ENDPOINT_GOALS_DELETE=/goals/:goalId
+
+# -----------------------
+# Payments Endpoints
+# -----------------------
+VITE_API_ENDPOINT_PAYMENTS_LIST=/payments
+VITE_API_ENDPOINT_PAYMENTS_CREATE=/payments
+VITE_API_ENDPOINT_PAYMENTS_GET=/payments/:paymentId
+VITE_API_ENDPOINT_PAYMENTS_PATCH=/payments/:paymentId
+
+# -----------------------
+# Coaches Endpoints
+# -----------------------
+VITE_API_ENDPOINT_COACHES_LIST=/coaches
+VITE_API_ENDPOINT_COACHES_GET=/coaches/:coachId
+
+# -----------------------
+# Entrepreneurs Endpoints
+# -----------------------
+VITE_API_ENDPOINT_ENTREPRENEURS_LIST=/entrepreneurs
+VITE_API_ENDPOINT_ENTREPRENEURS_GET=/entrepreneurs/:entrepreneurId
+
+# -----------------------
+# Startups Endpoints
+# -----------------------
+VITE_API_ENDPOINT_STARTUPS_LIST=/startups
+VITE_API_ENDPOINT_STARTUPS_GET=/startups/:startupId
+
+# -----------------------
+# Activity Endpoints
+# -----------------------
+VITE_API_ENDPOINT_ACTIVITY_LIST=/activities
+VITE_API_ENDPOINT_ACTIVITY_CREATE=/activities
+
+# -----------------------
+# Export Endpoint
+# -----------------------
+VITE_API_ENDPOINT_EXPORT_DASHBOARD=/exports/dashboard
+
+# -----------------------
+# Organization Endpoints
+# -----------------------
+VITE_API_ENDPOINT_ORGANIZATION_GET=/organization
+VITE_API_ENDPOINT_ORGANIZATION_UPDATE=/organization
+VITE_API_ENDPOINT_ORGANIZATION_UPLOAD_LOGO=/organization/logo
+
+# -----------------------
+# Roles Endpoints
+# -----------------------
+VITE_API_ENDPOINT_ROLES_LIST=/roles
+VITE_API_ENDPOINT_ROLES_CREATE=/roles
+VITE_API_ENDPOINT_ROLES_UPDATE=/roles/:roleId
+VITE_API_ENDPOINT_ROLES_DELETE=/roles/:roleId
+
+# -----------------------
+# Files Endpoints
+# -----------------------
+VITE_API_ENDPOINT_FILES_UPLOAD=/upload
+VITE_API_ENDPOINT_FILES_DELETE=/upload/:fileId
+
+# -----------------------
+# Notifications Endpoints
+# -----------------------
+VITE_API_ENDPOINT_NOTIFICATIONS_LIST=/notifications
+VITE_API_ENDPOINT_NOTIFICATIONS_READ=/notifications/:notificationId/read
+
+# -----------------------
+# Me Endpoints
+# -----------------------
+VITE_API_ENDPOINT_ME_SESSIONS=/me/sessions
+VITE_API_ENDPOINT_ME_GOALS=/me/goals
+VITE_API_ENDPOINT_ME_STARTUPS=/me/startups
+VITE_API_ENDPOINT_ME_PAYMENTS=/me/payments
+VITE_API_ENDPOINT_ME_NOTIFICATIONS=/me/notifications
+
+# -----------------------
+# Search Endpoints
+# -----------------------
+VITE_API_ENDPOINT_SEARCH=/search
