feat: Enhance goal management features
- Update GoalCard to display entrepreneur names correctly, handling both string IDs and user objects.
- Refactor GoalDetailsModal to include comments functionality and improve milestone status updates.
- Introduce CreateGoalModal for creating new goals with associated milestones and user selections.
- Update API hooks to support new goal creation, milestone status updates, and comments.
- Modify CalendarPage, CreateSessionPage, and GoalsPage to fetch users by role from a unified endpoint.
- Enhance PaymentsPage with invoice download and email functionalities, including toast notifications for user feedback.
- Clean up API endpoints to streamline user and payment operations.

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-﻿# Base API URL
+﻿# API Configuration
 VITE_API_URL=http://localhost:5000/api/v1
 
 # Environment
@@ -20,15 +20,10 @@ VITE_API_ENDPOINT_SESSIONS_GET=/sessions/:sessionId
 VITE_API_ENDPOINT_SESSIONS_UPDATE=/sessions/:sessionId
 VITE_API_ENDPOINT_SESSIONS_PATCH=/sessions/:sessionId
 VITE_API_ENDPOINT_SESSIONS_DELETE=/sessions/:sessionId
-VITE_API_ENDPOINT_SESSIONS_CONFLICT_CHECK=/sessions/check-conflict
-VITE_API_ENDPOINT_SESSIONS_CALENDAR=/sessions/calendar
-VITE_API_ENDPOINT_SESSIONS_STATUS_UPDATE=/sessions/:sessionId/status
-VITE_API_ENDPOINT_SESSIONS_RATE=/sessions/:sessionId/rating
 
 # Session Notes
 VITE_API_ENDPOINT_SESSIONS_NOTES_LIST=/sessions/:sessionId/notes
 VITE_API_ENDPOINT_SESSIONS_NOTES_CREATE=/sessions/:sessionId/notes
-VITE_API_ENDPOINT_SESSIONS_NOTES_PATCH=/sessions/:sessionId/notes
 
 # -----------------------
 # Dashboard Endpoints
@@ -37,9 +32,6 @@ VITE_API_ENDPOINT_DASHBOARD_STATS=/dashboard/stats
 VITE_API_ENDPOINT_DASHBOARD_SESSIONS=/dashboard/sessions
 VITE_API_ENDPOINT_DASHBOARD_GOALS_CATEGORY=/dashboard/goals-category
 VITE_API_ENDPOINT_DASHBOARD_REVENUE=/dashboard/revenue
-VITE_API_ENDPOINT_DASHBOARD_MANAGER=/dashboard/manager
-VITE_API_ENDPOINT_DASHBOARD_COACH=/dashboard/coach
-VITE_API_ENDPOINT_DASHBOARD_ENTREPRENEUR=/dashboard/entrepreneur
 
 # -----------------------
 # Users Endpoints
@@ -50,7 +42,6 @@ VITE_API_ENDPOINT_USERS_GET=/users/:userId
 VITE_API_ENDPOINT_USERS_UPDATE=/users/:userId
 VITE_API_ENDPOINT_USERS_PATCH=/users/:userId
 VITE_API_ENDPOINT_USERS_DELETE=/users/:userId
-VITE_API_ENDPOINT_USERS_ROLE_PATCH=/users/:userId/role
 
 # -----------------------
 # Goals Endpoints
@@ -61,11 +52,6 @@ VITE_API_ENDPOINT_GOALS_GET=/goals/:goalId
 VITE_API_ENDPOINT_GOALS_UPDATE=/goals/:goalId
 VITE_API_ENDPOINT_GOALS_PATCH=/goals/:goalId
 VITE_API_ENDPOINT_GOALS_DELETE=/goals/:goalId
-VITE_API_ENDPOINT_GOALS_PROGRESS_UPDATE=/goals/:goalId/progress
-VITE_API_ENDPOINT_GOALS_MILESTONE_STATUS=/goals/:goalId/milestones/:milestoneId
-VITE_API_ENDPOINT_GOALS_ADD_COMMENT=/goals/:goalId/comments
-VITE_API_ENDPOINT_GOALS_ADD_COLLABORATOR=/goals/:goalId/collaborators
-VITE_API_ENDPOINT_GOALS_LINK_SESSION=/goals/:goalId/sessions/:sessionId
 
 # -----------------------
 # Payments Endpoints
@@ -74,23 +60,8 @@ VITE_API_ENDPOINT_PAYMENTS_LIST=/payments
 VITE_API_ENDPOINT_PAYMENTS_CREATE=/payments
 VITE_API_ENDPOINT_PAYMENTS_GET=/payments/:paymentId
 VITE_API_ENDPOINT_PAYMENTS_PATCH=/payments/:paymentId
-VITE_API_ENDPOINT_PAYMENTS_GENERATE=/payments/generate
-VITE_API_ENDPOINT_PAYMENTS_MARK_PAID=/payments/:paymentId/mark-paid
-VITE_API_ENDPOINT_PAYMENTS_INVOICE_DOWNLOAD=/payments/:paymentId/invoice/download
-VITE_API_ENDPOINT_PAYMENTS_INVOICE_SEND=/payments/:paymentId/invoice/send
-VITE_API_ENDPOINT_PAYMENTS_STATS=/payments/stats
-
-# -----------------------
-# Coaches Endpoints
-# -----------------------
-VITE_API_ENDPOINT_COACHES_LIST=/coaches
-VITE_API_ENDPOINT_COACHES_GET=/coaches/:coachId
-
-# -----------------------
-# Entrepreneurs Endpoints
-# -----------------------
-VITE_API_ENDPOINT_ENTREPRENEURS_LIST=/entrepreneurs
-VITE_API_ENDPOINT_ENTREPRENEURS_GET=/entrepreneurs/:entrepreneurId
+VITE_API_ENDPOINT_PAYMENTS_INVOICE=/payments/:paymentId/invoice
+VITE_API_ENDPOINT_PAYMENTS_SEND_INVOICE=/payments/:paymentId/send-invoice
 
 # -----------------------
 # Startups Endpoints
@@ -135,18 +106,6 @@ VITE_API_ENDPOINT_FILES_DELETE=/upload/:fileId
 # -----------------------
 VITE_API_ENDPOINT_NOTIFICATIONS_LIST=/notifications
 VITE_API_ENDPOINT_NOTIFICATIONS_READ=/notifications/:notificationId/read
-VITE_API_ENDPOINT_NOTIFICATIONS_UNREAD_COUNT=/notifications/unread-count
-VITE_API_ENDPOINT_NOTIFICATIONS_MARK_ALL_READ=/notifications/mark-all-read
-VITE_API_ENDPOINT_NOTIFICATIONS_DELETE=/notifications/:notificationId
-
-# -----------------------
-# Me Endpoints
-# -----------------------
-VITE_API_ENDPOINT_ME_SESSIONS=/me/sessions
-VITE_API_ENDPOINT_ME_GOALS=/me/goals
-VITE_API_ENDPOINT_ME_STARTUP=/me/startup
-VITE_API_ENDPOINT_ME_PAYMENTS=/me/payments
-VITE_API_ENDPOINT_ME_NOTIFICATIONS=/me/notifications
 
 # -----------------------
 # Search Endpoints
