--- a/env.example
+++ b/env.example
@@ -10,6 +10,8 @@ VITE_APP_ENV=development
 VITE_API_ENDPOINT_AUTH_LOGIN=/auth/login
 VITE_API_ENDPOINT_AUTH_REGISTER=/auth/register
 VITE_API_ENDPOINT_AUTH_ME=/auth/me
+VITE_API_ENDPOINT_AUTH_REFRESH=/auth/refresh
+VITE_API_ENDPOINT_AUTH_LOGOUT=/auth/logout
 
 # -----------------------
 # Session Endpoints
